--- a/your-code/pandas_1.ipynb
+++ b/your-code/pandas_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "9  73.7  39.0  43.2  81.6  34.7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "9     73.7     39.0     43.2     81.6     34.7"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "9     73.7     43.2     34.7"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "88.8"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "40.75"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "4         1              0.90  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,228 +1097,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Serial No.</th>\n",
-       "      <th>GRE Score</th>\n",
-       "      <th>TOEFL Score</th>\n",
-       "      <th>University Rating</th>\n",
-       "      <th>SOP</th>\n",
-       "      <th>LOR</th>\n",
-       "      <th>CGPA</th>\n",
-       "      <th>Research</th>\n",
-       "      <th>Chance of Admit</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Serial No.</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>337</td>\n",
-       "      <td>118</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>9.65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>316</td>\n",
-       "      <td>104</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>322</td>\n",
-       "      <td>110</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>8.67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>314</td>\n",
-       "      <td>103</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>330</td>\n",
-       "      <td>115</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>9.34</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>381</th>\n",
-       "      <td>381</td>\n",
-       "      <td>324</td>\n",
-       "      <td>110</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>9.04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>382</td>\n",
-       "      <td>325</td>\n",
-       "      <td>107</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>9.11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>383</td>\n",
-       "      <td>330</td>\n",
-       "      <td>116</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>9.45</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384</th>\n",
-       "      <td>384</td>\n",
-       "      <td>312</td>\n",
-       "      <td>103</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.78</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>385</th>\n",
-       "      <td>385</td>\n",
-       "      <td>333</td>\n",
-       "      <td>117</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>9.66</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>385 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Serial No.  GRE Score  TOEFL Score  University Rating  SOP  LOR   \\\n",
-       "Serial No.                                                                     \n",
-       "1                    1        337          118                  4  4.5   4.5   \n",
-       "2                    2        316          104                  3  3.0   3.5   \n",
-       "3                    3        322          110                  3  3.5   2.5   \n",
-       "4                    4        314          103                  2  2.0   3.0   \n",
-       "5                    5        330          115                  5  4.5   3.0   \n",
-       "...                ...        ...          ...                ...  ...   ...   \n",
-       "381                381        324          110                  3  3.5   3.5   \n",
-       "382                382        325          107                  3  3.0   3.5   \n",
-       "383                383        330          116                  4  5.0   4.5   \n",
-       "384                384        312          103                  3  3.5   4.0   \n",
-       "385                385        333          117                  4  5.0   4.0   \n",
-       "\n",
-       "            CGPA  Research  Chance of Admit   \n",
-       "Serial No.                                    \n",
-       "1           9.65         1              0.92  \n",
-       "2           8.00         1              0.72  \n",
-       "3           8.67         1              0.80  \n",
-       "4           8.21         0              0.65  \n",
-       "5           9.34         1              0.90  \n",
-       "...          ...       ...               ...  \n",
-       "381         9.04         1              0.82  \n",
-       "382         9.11         1              0.84  \n",
-       "383         9.45         1              0.91  \n",
-       "384         8.78         0              0.67  \n",
-       "385         9.66         1              0.95  \n",
-       "\n",
-       "[385 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code here\n",
     "admissions = admissions.set_index(\"Serial No.\", drop=False)\n",
@@ -1327,9 +1108,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            GRE Score  TOEFL Score  University Rating  SOP  LOR   CGPA  \\\n",
+      "Serial No.                                                               \n",
+      "1                 337          118                  4  4.5   4.5  9.65   \n",
+      "2                 316          104                  3  3.0   3.5  8.00   \n",
+      "3                 322          110                  3  3.5   2.5  8.67   \n",
+      "4                 314          103                  2  2.0   3.0  8.21   \n",
+      "5                 330          115                  5  4.5   3.0  9.34   \n",
+      "\n",
+      "            Research  Chance of Admit   \n",
+      "Serial No.                              \n",
+      "1                  1              0.92  \n",
+      "2                  1              0.72  \n",
+      "3                  1              0.80  \n",
+      "4                  0              0.65  \n",
+      "5                  1              0.90  \n"
+     ]
+    }
+   ],
    "source": [
     "admissions = admissions.set_index(\"Serial No.\")\n",
     "print(admissions.head())\n"
@@ -1337,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1344,7 @@
        "[385 rows x 8 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,6 +1358,74 @@
    "metadata": {},
    "source": [
     "Turns out that `GRE Score` and `CGPA` also uniquely identify the data. Show this in the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GRE Score</th>\n",
+       "      <th>TOEFL Score</th>\n",
+       "      <th>University Rating</th>\n",
+       "      <th>SOP</th>\n",
+       "      <th>LOR</th>\n",
+       "      <th>CGPA</th>\n",
+       "      <th>Research</th>\n",
+       "      <th>Chance of Admit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Serial No.</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [GRE Score, TOEFL Score, University Rating, SOP, LOR , CGPA, Research, Chance of Admit ]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicates = admissions.duplicated(subset=['GRE Score', 'CGPA'], keep=False)\n",
+    "admissions[duplicates]"
    ]
   },
   {
@@ -1597,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
